Falta de integración con dispositivos moviles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -267,11 +267,11 @@
         <div id="debug-log"></div>
     </div>
 
-    <!-- Scripts -->
-    <script src="js/config.js?v=6"></script>
-    <script src="js/crypto.js?v=6"></script>
-    <script src="js/api.js?v=6"></script>
-    <script src="js/websocket.js?v=6"></script>
-    <script src="js/app.js?v=6"></script>
+    <!-- Scripts v14 - Fix alineación vertical de mensajes -->
+    <script src="js/config.js?v=14"></script>
+    <script src="js/crypto.js?v=14"></script>
+    <script src="js/api.js?v=14"></script>
+    <script src="js/websocket.js?v=14"></script>
+    <script src="js/app.js?v=14"></script>
 </body>
 </html>
